--- a/index.html
+++ b/index.html
@@ -1,7 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Power BI Portfolio</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    h1, h2 {
+      color: #005a9e;
+    }
+    .report {
+      background: #fff;
+      padding: 1rem;
+      margin-bottom: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    }
+    footer {
+      text-align: center;
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      color: #666;
+    }
+  </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+  <h1>My Power BI Projects</h1>
+  <p>Welcome to my portfolio! Here you'll find interactive dashboards, key insights, and data stories I've built using Power BI.</p>
+
+  <div class="report">
+    <h2>📊 Sales Dashboard</h2>
+    <p>A deep dive into monthly performance trends, top products, and regional sales breakdowns.</p>
+    <p><a href="https://app.powerbi.com/view?r=yourEmbedLinkHere" target="_blank">View Report</a></p>
+  </div>
+
+  <div class="report">
+    <h2>👥 HR Analytics</h2>
+    <p>Exploring employee demographics, turnover patterns, and retention strategies.</p>
+    <p><a href="https://app.powerbi.com/view?r=yourEmbedLinkHere" target="_blank">View Report</a></p>
+  </div>
+
+  <div class="report">
+    <h2>💸 Budget Tracker</h2>
+    <p>Forecasting spending patterns and visualizing variance from planned budgets using DAX measures.</p>
+    <p><a href="https://app.powerbi.com/view?r=yourEmbedLinkHere" target="_blank">View Report</a></p>
+  </div>
+
+  <footer>
+    Made with 💙 by Cássio • <a href="https://www.linkedin.com/in/YOURPROFILE/">LinkedIn</a>
+  </footer>
+
 </body>
 </html>
