--- a/index.html
+++ b/index.html
@@ -1,90 +1,39 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Cássio Feldkircher</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f2f2f2;
-        }
-
-        header {
-            background-color: #2c2c2c;
-            color: #fff;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-        }
-
-        .main {
-            padding: 3rem 2rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .hero-text {
-            font-size: 1.8rem;
-            text-align: center;
-            margin-bottom: 2rem;
-            max-width: 600px;
-            color: #333;
-        }
-
-        .hero-image img {
-            width: 300px;
-            border-radius: 8px;
-            margin-bottom: 2rem;
-        }
-
-        .cards {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-            margin-top: 2rem;
-        }
-
-        .card {
-            width: 280px;
-            height: 180px;
-            background-color: #cccccc;
-            border-radius: 10px;
-        }
-
-        @media (max-width: 768px) {
-            .hero-text {
-                font-size: 1.3rem;
-            }
-
-            .card {
-                width: 90%;
-            }
-        }
-    </style>
+    <title>Cássio Feldkircher's Portfolio</title>
+    <!-- Link to the external CSS file -->
+    <link rel="stylesheet" href="Source/css/style.css">
 </head>
 <body>
     <header>
-        <div>Portfolio Cássio Feldkircher</div>
-        <div>Aptfix Labs</div>
+        <div>Cássio Feldkircher's Portfolio</div>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <div><img src="Source/images/CF_gray.png" alt="CF logo"></div>
     </header>
 
     <section class="main">
-        <div class="hero-text">
-            Soluções de software personalizados para ajudar sua empresa a crescer.
+        <div class="hero-section">
+            <div class="hero-text">
+                <h1>I'm here to help you reach your goals.</h1>
+                <p>Hi, I'm Cássio. I'm passionate about stories - they help us understand the past and guide us toward the future. Through my journey, I’ve learned a lot about people: their complexity teaches us every day how to better understand their behavior, desires, and decisions.</p>
+                <p>That’s why I believe <b> data is more than just numbers</b>. To truly use it well, we must understand the business, its goals, and its audience. Only then can we communicate insights that matter. This process needs to be clear, efficient, and focused on impact.</p>
+                <p>I’m here to help with that journey. <b>We can learn together, build together, and succeed together</b>.</p>
+            </div>
+            <div class="hero-image">
+                <img src="Source/images/eu.jpg" alt="Cássio">
+            </div>
         </div>
-        <div class="hero-image">
-            <img src="person-working-on-laptop.jpg" alt="Pessoa trabalhando no notebook">
-        </div>
+
         <div class="cards">
             <div class="card"></div>
             <div class="card"></div>
@@ -92,9 +41,13 @@
         </div>
     </section>
 
-    <script>
-        // Placeholder for future JS enhancements
-        console.log("Bem-vindo ao portfolio de Cássio!");
-    </script>
+    <!-- Link to external JavaScript file -->
+    <script src="Source/js/script.js"></script>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2025 Cássio Feldkircher. All rights reserved.</p>
+            <p>Follow me on <a href="https://www.linkedin.com/in/cassiofeldkircher/" target="_blank">LinkedIn</a></p>
+        </div>
+    </footer>
 </body>
 </html>
