Adjust project divs

--- a/index.html
+++ b/index.html
@@ -35,9 +35,33 @@
         </div>
 
         <div class="cards">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <!-- Project Card 1 -->
+            <div class="card">
+                <img src="https://placehold.co/280x100/A8A8A8/ffffff?text=Project+1" alt="Project 1 Thumbnail" class="card-img">
+                <div class="card-content">
+                    <h2>Project Alpha</h2>
+                    <p>A brief description of Project Alpha, highlighting its key features or impact.</p>
+                    <a href="#" class="card-link">Learn More</a>
+                </div>
+            </div>
+            <!-- Project Card 2 -->
+            <div class="card">
+                <img src="https://placehold.co/280x100/A8A8A8/ffffff?text=Project+2" alt="Project 2 Thumbnail" class="card-img">
+                <div class="card-content">
+                    <h2>Project Beta</h2>
+                    <p>This project focused on developing a scalable solution for data analysis.</p>
+                    <a href="#" class="card-link">Learn More</a>
+                </div>
+            </div>
+            <!-- Project Card 3 -->
+            <div class="card">
+                <img src="https://placehold.co/280x100/A8A8A8/ffffff?text=Project+3" alt="Project 3 Thumbnail" class="card-img">
+                <div class="card-content">
+                    <h2>Project Gamma</h2>
+                    <p>An innovative web application designed to improve user engagement.</p>
+                    <a href="#" class="card-link">Learn More</a>
+                </div>
+            </div>
         </div>
     </section>
 
