--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <p>Hi, I'm Cássio. I'm passionate about stories - they help us understand the past and guide us toward the future. Through my journey, I’ve learned a lot about people: their complexity teaches us every day how to better understand their behavior, desires, and decisions.</p>
                 <p>That’s why I believe <b> data is more than just numbers</b>. To truly use it well, we must understand the business, its goals, and its audience. Only then can we communicate insights that matter. This process needs to be clear, efficient, and focused on impact.</p>
                 <p>I’m here to help with that journey. <b>We can learn together, build together, and succeed together</b>.</p>
+                <p>My main <b>skills</b> to support this process are:<br>
+                <i><b>SQL · Power BI · Python · Excel · User Experience</b></i></p>
             </div>
             <div class="hero-image">
                 <img src="Source/images/eu.jpg" alt="Cássio">
@@ -37,10 +39,10 @@
         <div class="cards">
             <!-- Project Card 1 -->
             <div class="card">
-                <img src="https://placehold.co/280x100/A8A8A8/ffffff?text=Project+1" alt="Project 1 Thumbnail" class="card-img">
+                <img src="Source/images/projects/jobs_statistics/screen.png" alt="jobs_statistics" class="card-img">
                 <div class="card-content">
-                    <h2>Project Alpha</h2>
-                    <p>A brief description of Project Alpha, highlighting its key features or impact.</p>
+                    <h2>Job trends for workers</h2>
+                    <p>This project presents insights from job postings, focusing on the needs of people searching for new job opportunities</p>
                     <a href="#" class="card-link">Learn More</a>
                 </div>
             </div>
