--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
     <header>
         <div>Cássio Feldkircher's Portfolio</div>
-        <nav>
-            <ul>
+        <div class="menu-toggle" id="mobile-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <nav id="main-nav"> <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#services">Services</a></li>
