fix import script

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
 
     <!-- Link to external JavaScript file -->
-    <script src="Source/js/script.js"></script>
+    <script src="Source/js/scripts.js"></script>
     <footer>
         <div class="footer-content">
             <p>&copy; 2025 Cássio Feldkircher. All rights reserved.</p>
