Add contact and remove no projects

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cássio Feldkircher's Portfolio</title>
+    <title>CF's Portfolio</title>
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="Source/css/style.css">
 </head>
@@ -27,7 +27,7 @@
     </header>
 
     <section class="main">
-        <div class="hero-section" id="about"> <!-- Existing id="about" -->
+        <div class="hero-section" id="about">
             <div class="hero-text">
                 <h1>I'm here to help you reach your goals.</h1>
                 <p>Hi, I'm Cássio. I'm passionate about stories - they help us understand the past and guide us toward the future. Through my journey, I’ve learned a lot about people: their complexity teaches us every day how to better understand their behavior, desires, and decisions.</p>
@@ -41,9 +41,9 @@
             </div>
         </div>
 
-        <h2 class="section-title">Projects</h2> <!-- New Projects Title -->
+        <h2 class="section-title">Projects</h2>
 
-        <div class="cards" id="projects"> <!-- Added id="projects" here as requested -->
+        <div class="cards" id="projects">
             <!-- Project Card 1 -->
             <div class="card">
                 <img src="Source/images/projects/jobs_statistics/screen.png" alt="jobs_statistics" class="card-img">
@@ -53,7 +53,7 @@
                     <a href="pages/p_job_trends.html" class="card-link">Learn More</a>
                 </div>
             </div>
-            <!-- Project Card 2 -->
+            <!-- Project Card 2 -- >
             <div class="card">
                 <img src="https://placehold.co/280x100/A8A8A8/ffffff?text=Project+2" alt="Project 2 Thumbnail" class="card-img">
                 <div class="card-content">
@@ -62,7 +62,7 @@
                     <a href="#" class="card-link">Learn More</a>
                 </div>
             </div>
-            <!-- Project Card 3 -->
+            <!-- Project Card 3 -- >
             <div class="card">
                 <img src="https://placehold.co/280x100/A8A8A8/ffffff?text=Project+3" alt="Project 3 Thumbnail" class="card-img">
                 <div class="card-content">
@@ -70,8 +70,25 @@
                     <p>An innovative web application designed to improve user engagement.</p>
                     <a href="#" class="card-link">Learn More</a>
                 </div>
-            </div>
+            </div> -->
         </div>
+
+        <!-- Contact Section -->
+        <section id="contact" class="contact-section">
+            <h2 class="section-title">Contact</h2>
+            <div class="contact-links">
+                <p>Feel free to connect with me:</p>
+                <a href="https://www.linkedin.com/in/cassiofeldkircher/" target="_blank" class="contact-link">
+                    <img src="Source/icons/linkedin_wb.svg" alt="LinkedIn icon" class="contact-icon">
+                    <span>LinkedIn</span>
+                </a>
+                <a href="mailto:your.email@example.com" class="contact-link">
+                    <img src="Source/icons/email.png" alt="Email icon" class="contact-icon">
+                    <span>Email Me</span>
+                </a>
+            </div>
+        </section>
+
     </section>
 
     <!-- Link to external JavaScript file -->
