--- a/pages/p_job_trends.html
+++ b/pages/p_job_trends.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job trends for workers - Cássio Feldkircher's Portfolio</title>
+    <title>Job trends for workers - CF's Portfolio</title>
     <!-- Link to the external global CSS file -->
     <link rel="stylesheet" href="../Source/css/style.css">
     <!-- Link to the external project-specific CSS file -->
@@ -21,7 +21,7 @@
                 <li><a href="../index.html#about">About</a></li> <!-- Updated link -->
                 <li><a href="../index.html#projects">Projects</a></li> <!-- Updated link -->
                 <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="../index.html#contact">Contact</a></li>
             </ul>
         </nav>
         <div><img src="../Source/images/CF_gray.png" alt="CF logo"></div>
